# mobile-inspector-cli

./: Cargo.toml  LICENSE  README.md
src/: attr.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  repl.rs
src/filter/: attrs.rs  mod.rs  xpath.rs
src/output/: json.rs  mod.rs  table.rs  xml.rs
src/platform/: android.rs  ios.rs  mod.rs
tests/: filters.rs
tests/fixtures/: android_dump.xml  ios_dump.xml
